<resources>
    <string name="app_name">WhatsApp</string>
    <string name="email_type">Digite seu e-mail</string>
    <string name="password_type">Digite sua senha</string>
    <string name="signin_button">Logar</string>
    <string name="dont_have_account">Não tem conta? Cadastre-se</string>
    <string name="name_type">Digite seu nome</string>
    <string name="register_button">Cadastrar</string>

    <string name="toolbar_main">WhatsApp</string>
    <string name="toolbar_settings">Configurações</string>

    <string name="menu_search">Pesquisar</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_signOut">Sair</string>

    <string name="tab_chats">Conversas</string>
    <string name="tab_contacts">Contatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_group">GroupActivity</string>

</resources>